--- a/app/views/landmarks/_landmark_list.html.erb
+++ b/app/views/landmarks/_landmark_list.html.erb
@@ -10,6 +10,7 @@
       </div>
     </div>
     <% end %>
+    <% unless current_user.nil? %>
     <div class="landmark-follow-star">
       <%= link_to follow_landmark_path(landmark), method: :put, remote: true do %>
       <% if current_user.following?(landmark) %>
@@ -19,6 +20,7 @@
       <% end %>
       <% end %>
     </div>
+    <% end %>
   </div>
   <% end %>
 </div>
