--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Guided - Everyone is a storyteller</title>
   <%= favicon_link_tag 'favicon.png' %>
+  <%= favicon_link_tag 'guided_icon.png', :rel => 'apple-touch-icon', :type => 'image/png' %>
   <%= csrf_meta_tags %>
   <%= action_cable_meta_tag %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
