--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,9 +24,10 @@
         <% end %>
         <br>
       </div>
-
+      <% if current_user.id == @user.id %>
       <%= link_to "Update user info", edit_user_registration_path, class: "btn btn-danger"  %>
       <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
+      <% end %>
       <% unless current_user.id == @user.id %>
       <div class="user-follow-star">
         <%= link_to follow_user_path(@user), method: :put, remote: true do %>
