--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -20,6 +20,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-6 landmarkshow-content">
       <%= render partial: 'info_column_left', locals: { story: @story } %>
+      <%= social_share_button_tag(@story.title) %>
     </div>
     <div class="col-xs-12 col-sm-6 landmarkshow-content">
       <%= render partial: 'info_column_right', locals: { story: @story } %>
