--- a/app/assets/stylesheets/components/_story_list_item.scss
+++ b/app/assets/stylesheets/components/_story_list_item.scss
@@ -24,7 +24,7 @@
   margin-top: 0;
 }
 .story-list-body p {
-  font-weight: lighter;
+  font-weight: 300;
   color: #999999;
   margin-bottom: 0;
 }
