--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= favicon_link_tag 'favicon.png' %>
 
   <!-- iOS WEB-APP -->
-  <%= favicon_link_tag 'guided_icon.png', :rel => 'apple-touch-icon', :type => 'image/png' %>
+  <%= favicon_link_tag 'guided_icon_app.png', :rel => 'apple-touch-icon', :type => 'image/png' %>
   <meta name="apple-mobile-web-app-title" content="Guided">
   <!-- END iOS WEB-APP -->
 
