--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Guided - " + @landmark.name %>
+
 <div class="landmarkshow-banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.1) 0%, rgba(0,36,61,0.1) 50%), url(<%= @landmark.image %>);">
   <div class="landmarkbanner-content">
     <h1>
