--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Guided - New Story" %>
+
 <% link = ['https://static.pexels.com/photos/15286/pexels-photo.jpg', 'https://static.pexels.com/photos/374710/pexels-photo-374710.jpeg', 'https://static.pexels.com/photos/572688/pexels-photo-572688.jpeg', 'https://static.pexels.com/photos/52599/pexels-photo-52599.jpeg'].sample %>
 
 <% if @landmark != nil %>
