--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title, "Guided - All Stories" %>
+
 <%= render partial: 'shared/tiny_banner', locals: {
   image: "https://i0.wp.com/behindthelenscap.smugmug.com/Amsterdam/i-gPrPZck/0/ecde89d7/L/Amsterdam-kade-2-L.jpg?resize=800%2C500&ssl=1"
 } %>
