--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -5,7 +5,7 @@
 <h1>All stories</h1>
 
 
-<%= render 'story_list', stories: @stories %>
+<%= render 'story_list', stories: @all_languages %>
 
 
 <!-- end of container -->
