--- a/app/assets/stylesheets/components/_story_list_item.scss
+++ b/app/assets/stylesheets/components/_story_list_item.scss
@@ -4,7 +4,11 @@
   transition: all 0.15s ease;
   border: 1px solid rgba(0,0,0,0.05);
   flex-direction: column;
+}
 
+.language {
+  color: gray;
+  font-size: 14px;
 }
 
 .story-list-top {
@@ -39,14 +43,21 @@
 
 /* Upvote design */
 .story-list-upvote {
-  padding-right: 20px;
+      width: 70px;
+    padding: 0;
   text-align: center;
   transition: all 0.15s ease;
   font-weight: bold;
   font-size: 13px;
   line-height: 12px;
-  width:20px;
   display:flex;
+  a {
+        width: 100%;
+        text-decoration: none;
+        &:hover {
+          text-decoration: none;
+        }
+  }
   // justify-content:flex-start;
   // flex-direction: column;
 }
@@ -54,6 +65,8 @@
 .story-list-count {
   margin: 2px 0 0;
   color: black !important;
+  display: flex;
+    flex-direction: column;
 }
 
 .voted-red {
