--- a/app/views/stories/_story_list.html.erb
+++ b/app/views/stories/_story_list.html.erb
@@ -1,16 +1,24 @@
 <div class="row">
+
   <% stories.each do |story|%>
+
   <div class="col-xs-12">
     <div class="story-list">
       <div class='story-list-top'>
         <%= link_to story_path(story), class:"story-link" do %>
         <%= cl_image_tag(story.image, class: "story-list-image hidden-xs") %>
         <div class='story-list-body'>
-          <h3><%= story.title %></h3>
+          <h3><%= story.title %>
+
+          </h3>
+            <p class="language">
+            <i class="fa fa-fw fa-globe" aria-hidden="true"></i>
+              <%= story.language %>
+            </p>
           <p><%= story.description %></p>
         </div>
         <% end %>
-          <% unless current_user.nil? %>
+        <% unless current_user.nil? %>
         <div class='story-list-upvote'>
           <%= link_to like_story_path(story), method: :put, remote: true do %>
           <!--  <div class="story-list-arrow"></div> -->
@@ -25,7 +33,7 @@
               <% end %>
               <% end %>
             </div>
-              <% end %>
+            <% end %>
           </div>
           <div class="story-list-player">
             <ul class="story-list-controls">
