--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -47,6 +47,8 @@
   width: 35px;
   border-radius: 50%;
   border: 2px solid white;
+  background-size: cover;
+  background-position: center;
 }
 
 /* Right section */
