--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,7 @@
         <%= link_to "Landmarks", landmarks_path, class: "navbar-wagon-item navbar-wagon-link" %>
         <%= link_to "Stories", stories_path, class: "navbar-wagon-item navbar-wagon-link" %>
         <%= link_to user_path(current_user) do %>
-        <%= image_tag current_user.image, class: "avatar dropdown-toggle" %>
+        <div class="avatar" style="background-image:url('<%= image_path current_user.image %>');"></div>
         <% end %>
 
         <div class="navbar-wagon-item">
