--- a/app/assets/stylesheets/components/_story_list_item.scss
+++ b/app/assets/stylesheets/components/_story_list_item.scss
@@ -1,3 +1,11 @@
+i a {
+    width: 100%;
+    text-decoration: none;
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
 .story-list {
   display: flex;
   border-radius: 3px;
@@ -5,6 +13,7 @@
   border: 1px solid rgba(0,0,0,0.05);
   flex-direction: column;
 }
+
 
 .language {
   color: gray;
@@ -43,30 +52,39 @@
 
 /* Upvote design */
 .story-list-upvote {
-      width: 70px;
-    padding: 0;
+  width: 40px;
+  padding: 0;
   text-align: center;
   transition: all 0.15s ease;
   font-weight: bold;
   font-size: 13px;
   line-height: 12px;
   display:flex;
-  a {
-        width: 100%;
-        text-decoration: none;
-        &:hover {
-          text-decoration: none;
-        }
+  align-content: center;
+  justify-content: space-around;
+  text-decoration: none;
+  &:hover {
+      text-decoration: none;
+    }
+  i {
+    width: 100%;
+    text-decoration: none;
+    &:hover {
+      text-decoration: none;
+    }
   }
   // justify-content:flex-start;
   // flex-direction: column;
 }
 
 .story-list-count {
+  &:hover {
+      text-decoration: none;
+    }
   margin: 2px 0 0;
   color: black !important;
   display: flex;
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .voted-red {
@@ -74,6 +92,10 @@
 }
 
 .story-list-arrow {
+
+  &:hover {
+      text-decoration: none;
+    }
   transition: all 0.15s ease;
   width: 0;
   height: 0;
@@ -83,6 +105,7 @@
   border-bottom: 9px solid black;
   border-radius: 2px;
   margin: auto;
+  text-decoration:none;
 }
 
 /* Controls design */
