--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -3,3 +3,8 @@
 // @import "dashboard";
 // @import "profile";
 // @import "map";
+
+a:hover a:active {
+  text-decoration: none;
+  color: #fb412c;
+}
