--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -8,7 +8,7 @@
   <div class="background-image" style="background-image:url(<%=link%>);"></div>
 <% end %>
 
-<div class="form-container">
+<div class="form-container" style="margin-top: 100px;">
 
   <h1>Upload a new story</h1>
   <h4>This story will be added to your account, <%= @user.first_name %> <%= @user.last_name %> </h4>
