--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -4,6 +4,8 @@
 
 .alert {
   margin: 0;
+  // margin-top: 70px;
+  pointer-events: none;
   text-align: center;
   color: white;
   position: absolute;
