--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -27,6 +27,10 @@
   }
 }
 
+.user-description {
+  text-align: left;
+}
+
 .story-upload-btn {
   // margin: 20px;
   margin-top: 40px;
@@ -90,11 +94,20 @@ ul.user-actions {
     a {
       display: flex;
       align-items: center;
+
+  justify-content: center;
       .fa {
         flex: 0 0 27px;
       }
     }
   }
+}
+
+.user-actions-list {
+  text-align: center;
+  justify-content: center;
+  align-items:center;
+
 }
 
 .current-user-stories img {
