--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,123 +41,114 @@
             <% end %>
           </h1>
 
-<!--         <button type="button" class="btn btn-success"> <span class="badge"></span></button>
--->      </div>
+        </div>
 
 
-<div>
-  <%  if @user.city != nil %>
-  <h5 class="highlight-down">
-    <%= @user.city %>
+        <div>
+          <%  if @user.city != nil %>
+          <h5 class="highlight-down">
+            <%= @user.city %>
 
-  </h5>
-  <% end %>
-</div>
-<div>
-  <%  if @user.description != nil %>
-  <%= @user.description %>
-  <% end %>
-  <br>
-</div>
-<ul class="list-unstyled user-actions">
-  <% unless current_user == nil %>
-  <% if current_user.id == @user.id %>
-  <!-- Buttons -->
-  <li>
-    <%= link_to edit_user_registration_path, class: "link-warning" do %>
-    <i class="fa fa-pencil-square-o"></i> Edit your profile
-    <% end %>
-  </li>
-  <li>
-    <%= link_to new_story_path, class: "link-success" do %>
-    <i class="fa fa-plus"></i> Add a story
-    <% end %>
-  </li>
-  <% end %>
-  <% end %>
-</ul>
-
-
-
-<% unless current_user == nil %>
-<% if current_user.id == @user.id %>
-<!-- Stories: -->
-<div class="current-user-stories">
-  <%  if @user.first_name != nil %>
-  <h3>Your Stories</h3>
-  <%= render 'stories/story_list', stories: @stories %>
-  <% end %>
-  <% if @user.stories.count == 0 %>
-  <p>
-    You have not told a story yet.
-  </p>
-  <% end %>
-</div>
-<% end %>
-<% end %>
-</div>
-</div>
-
-
-
-<div class="col-xs-12 col-md-9">
-  <% if current_user == nil || current_user.id != @user.id %>
-  <!-- Stories: -->
-  <div>
-    <%  if @user.first_name != nil %>
-    <h3>Stories by <%= @user.first_name %></h3>
-    <%= render 'stories/story_list', stories: @stories %>
-    <% end %>
-
-  </div>
-  <% end %>
-
-  <% unless current_user == nil %>
-  <% if current_user.id == @user.id %>
-  <div>
-    <h3>Story feed</h3>
-    <%= render 'story_feed', stories: @feed_stories %>
-    <% if @feed_stories.count == 0 %>
-    <p>
-      New stories about landmarks or from users you are following will show up here.
-    </p>
-    <% end %>
-    <% end %>
-  </div>
-
-
-  <!-- Following landmarks/users -->
-  <div>
-    <div>
-      <h3>Following Landmarks</h3>
-      <%= render 'landmarks/landmark_list', landmarks: @following_landmarks %>
-      <% if @following_landmarks.count == 0 %>
-      <p>
-        Start following <%= link_to landmarks_path do %>some landmarks <% end %> you are interested in.
-      </p>
-      <% end %>
-    </div>
-
-    <div>
-      <h3>Following Storytellers</h3>
-      <ul class="list-inline">
-        <% @following_users.each do |user| %>
-        <li>
-          <%= link_to user do %>
-          <div class="class=list-inline-item user-image following-storyteller" style="background-image:url('<%= image_path user.image %>');"></div>
+          </h5>
           <% end %>
-        </li>
+        </div>
+        <div class="user-description">
+          <%  if @user.description != nil %>
+          <%= @user.description %>
+          <% end %>
+          <br>
+        </div>
+        <div class="user-actions-list">
+          <ul class="list-unstyled user-actions">
+            <% unless current_user == nil %>
+            <% if current_user.id == @user.id %>
+            <li>
+              <%= link_to edit_user_registration_path, class: "link-warning" do %>
+              <i class="fa fa-pencil-square-o"></i> Edit your profile
+              <% end %>
+            </li>
+            <li>
+              <%= link_to new_story_path, class: "link-success" do %>
+              <i class="fa fa-plus"></i> Add a story
+              <% end %>
+            </li>
+            <% end %>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+      <% unless current_user == nil %>
+      <% if current_user.id == @user.id %>
+      <div class="current-user-stories">
+        <%  if @user.first_name != nil %>
+        <h3>Your Stories</h3>
+        <%= render 'stories/story_list', stories: @stories %>
         <% end %>
-      </ul>
-      <% if @following_users.count == 0 %>
-      <p>
-        Start following <%= link_to stories_path do %>other storytellers <% end %>you are interested in.
-      </p>
+        <% if @user.stories.count == 0 %>
+        <p>
+          You have not told a story yet.
+        </p>
+        <% end %>
+      </div>
+      <% end %>
       <% end %>
     </div>
+  <div class="col-xs-12 col-md-9">
+    <% if current_user == nil || current_user.id != @user.id %>
+    <div>
+      <%  if @user.first_name != nil %>
+      <h3>Stories by <%= @user.first_name %></h3>
+      <%= render 'stories/story_list', stories: @stories %>
+      <% end %>
+
+    </div>
+    <% end %>
+
+    <% unless current_user == nil %>
+    <% if current_user.id == @user.id %>
+    <div>
+      <h3>Story feed</h3>
+      <%= render 'story_feed', stories: @feed_stories %>
+      <% if @feed_stories.count == 0 %>
+      <p>
+        New stories about landmarks or from users you are following will show up here.
+      </p>
+      <% end %>
+      <% end %>
+    </div>
+
+
+    <div>
+      <div>
+        <h3>Following Landmarks</h3>
+        <%= render 'landmarks/landmark_list', landmarks: @following_landmarks %>
+        <% if @following_landmarks.count == 0 %>
+        <p>
+          Start following <%= link_to landmarks_path do %>some landmarks <% end %> you are interested in.
+        </p>
+        <% end %>
+      </div>
+
+      <div>
+        <h3>Following Storytellers</h3>
+        <ul class="list-inline">
+          <% @following_users.each do |user| %>
+          <li>
+            <%= link_to user do %>
+            <div class="class=list-inline-item user-image following-storyteller" style="background-image:url('<%= image_path user.image %>');"></div>
+            <% end %>
+          </li>
+          <% end %>
+        </ul>
+        <% if @following_users.count == 0 %>
+        <p>
+          Start following <%= link_to stories_path do %>other storytellers <% end %>you are interested in.
+        </p>
+        <% end %>
+      </div>
+    </div>
   </div>
-</div>
-<% end %>
+  <% end %>
 
 
 </div>
