small bug fixes

--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -8,3 +8,8 @@ a:hover a:active {
   text-decoration: none;
   color: #fb412c;
 }
+
+a:-webkit-any-link {
+    cursor: auto;
+    text-decoration: none;
+}
