--- a/app/assets/stylesheets/landmarks/_show.scss
+++ b/app/assets/stylesheets/landmarks/_show.scss
@@ -19,9 +19,8 @@
 }
 .landmarkshow-banner p {
   font-size: 25px;
-  font-weight: lighter;
+  font-weight: heavy;
   color: rgb(255, 255, 255);
-  opacity: 0.6;
   margin-bottom: 30px;
 }
 
