--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -52,6 +52,27 @@
   }
 }
 
+.edit-button {
+  z-index: 9999999;
+  background-color: $green;
+  border: none;
+  width: 50px;
+  height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: transform 200ms ease;
+  &:hover {
+    transform: scale(1.05);
+    color: white;
+    text-decoration: none;
+  }
+}
+
+
 .btn-warning-round {
   color: $brand-warning;
   background-color: white;
@@ -84,6 +105,13 @@
   }
 }
 
+.buttons-on-one-line {
+  display:flex;
+  justify-content: space-between;
+}
 
+.story-back-button {
+  padding: 6px 12px;
+}
 
 
