Create landmark working, still needs validatiosn

--- a/app/views/landmarks/new.html.erb
+++ b/app/views/landmarks/new.html.erb
@@ -10,7 +10,7 @@
   <%= simple_form_for(@landmark) do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
-  <%= f.input :country %>
+  <%= f.input :country, :as => :string %> <!-- See code below for country select -->
   <%= f.input :city %>
   <%= f.input :address %>
   <%= f.input :image %>
@@ -19,3 +19,20 @@
   <% end %>
 
 </div>
+
+<!-- add:
+gem 'country-select'
+
+module ActiveAdmin::ViewsHelper
+
+  def country_dropdown
+    ActionView::Helpers::FormOptionsHelper::COUNTRIES
+  end
+end
+In your view file use
+
+form do |f|
+  f.inputs do
+    f.input :country, as: :select, collection: country_dropdown
+  end
+end -->
