--- a/app/views/landmarks/nearest.html.erb
+++ b/app/views/landmarks/nearest.html.erb
@@ -28,15 +28,15 @@
     </div>
 
     <div class="col-xs-12 new-nearest-story-button">
-    <% if current_user != nil %>
-        <%= link_to new_story_path(landmark: @nearest_landmark.id), class: "link-success" do %>
-        <i class="fa fa-plus"></i> Add a story
-        <% end %>
-    <% else %>
-    <%= link_to new_user_session_path, class: "link-success" do %>
-        <i class="fa fa-plus"></i> Add a story
-        <% end %>
-    <% end %>
+      <% if current_user != nil %>
+      <%= link_to new_story_path(landmark: @nearest_landmark.id), class: "link-success" do %>
+      <i class="fa fa-plus"></i> Add a story
+      <% end %>
+      <% else %>
+      <%= link_to new_user_session_path, class: "link-success" do %>
+      <i class="fa fa-plus"></i> Add a story
+      <% end %>
+      <% end %>
     </div>
   </div>
   <div class="row">
@@ -51,3 +51,41 @@
     </div>
   </div>
 </div>
+
+
+<!-- Testing Google Places -->
+
+<% @client = GooglePlaces::Client.new("AIzaSyAn5htD0ZhEpeCzN5kdMMbhy1kFPe5D7gw")%>
+
+<% places = @client.spots(params[:coord][0], params[:coord][1], :radius => 1500) %>
+
+
+<div class="container">
+  <h1>Nearby Google Places</h1>
+  <div class="row">
+    <% places.each do |place| %>
+    <div class="col-xs-12 col-md-6">
+      <% if place.photos[0] != nil %>
+      <div class="card landmark-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url( <%= place.photos[0].fetch_url(400) %>);">
+        <% else %>
+        <div class="card landmark-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(http://21642-presscdn.pagely.netdna-cdn.com/wp-content/themes/nucleare-pro/images/no-image-box.png;">
+          <% end %>
+          <div class="card-description">
+            <h2>
+              <%= place.name %>(<%=place.vicinity%>)
+            </h2>
+            <p>
+              <%= place.types %>
+            </p>
+          </div>
+        </div>
+
+        <div class="landmark-follow-star">
+          <img src="<%=  place.icon %>" alt="">
+        </div>
+
+
+      </div>
+      <% end %>
+    </div>
+  </div>
